--- a/SerializingDataStore/build.gradle
+++ b/SerializingDataStore/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
-version = '1.0'
+version = '0.0.2'
 
 repositories {
     mavenCentral()
@@ -10,6 +10,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.+'
+    testCompile 'org.ow2.asm:asm-debug-all:5.0.4'
 }
 
 apply plugin: 'maven-publish'
@@ -19,8 +20,9 @@ publishing {
         mavenJava(MavenPublication) {
             groupId = "net.avacati.lib"
             artifactId = "serializingdatastore"
-            version = "0.0.1"
+            version = "0.0.2"
             from components.java
         }
     }
 }
+
