Temp initial async commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
-pom.xml.next
+pom.xml.newInvocationConsumer
 release.properties
 dependency-reduced-pom.xml
 
