--- a/AggregateRepository/build.gradle
+++ b/AggregateRepository/build.gradle
@@ -13,6 +13,10 @@ dependencies {
 
 apply plugin: 'maven-publish'
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -20,6 +24,9 @@ publishing {
             artifactId = "aggregaterepository"
             version = "0.0.1"
             from components.java
+            artifact sourceJar {
+                classifier = 'sources'
+            }
         }
     }
 }
