--- a/Mvc/build.gradle
+++ b/Mvc/build.gradle
@@ -16,6 +16,10 @@ dependencies {
 
 apply plugin: 'maven-publish'
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -23,6 +27,9 @@ publishing {
             artifactId = "mvc"
             version = "0.0.1"
             from components.java
+            artifact sourceJar {
+                classifier = 'sources'
+            }
         }
     }
 }
