--- a/SerializingDataStore/build.gradle
+++ b/SerializingDataStore/build.gradle
@@ -15,6 +15,10 @@ dependencies {
 
 apply plugin: 'maven-publish'
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -22,6 +26,9 @@ publishing {
             artifactId = "serializingdatastore"
             version = "0.0.2"
             from components.java
+            artifact sourceJar {
+                classifier = 'sources'
+            }
         }
     }
 }
