--- a/SerializingDataStore/build.gradle
+++ b/SerializingDataStore/build.gradle
@@ -5,9 +5,11 @@ version = '0.0.2'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
+    compile project(':AggregateRepository')
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.+'
     testCompile 'org.ow2.asm:asm-debug-all:5.0.4'
